<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_movies"
        android:icon="@drawable/ic_movies_black"
        android:title="@string/title_movies" />

    <item
        android:id="@+id/navigation_tv_show"
        android:icon="@drawable/ic_tv_black"
        android:title="@string/title_tv_show" />
</menu>
